doctor admin done

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>KNIT - Log In</title>
+    <title>Doctor Appointment - Log In</title>
 
     <!-- ================= Favicon ================== -->
     <!-- Standard -->
-    <link rel="shortcut icon" href="http://placehold.it/64.png/000/fff" />
+    <link rel="shortcut icon" href="assets/images/fav.png" />
     <!-- Retina iPad Touch Icon-->
     <link
       rel="apple-touch-icon"
@@ -53,7 +53,9 @@
           <div class="col-lg-5">
             <div class="login-content">
               <div class="login-logo">
-                <a href="index.html"><span>Doctor Appointment</span></a>
+                <a href="index.html"
+                  ><img src="assets/images/logo.png" alt=""
+                /></a>
               </div>
               <div class="login-form">
                 <h4>Admin Login</h4>
