--- a/singlePatient.html
+++ b/singlePatient.html
@@ -7,7 +7,7 @@
     <title>Doctor Appointment : Single Patient</title>
     <!-- ================= Favicon ================== -->
     <!-- Standard -->
-    <link rel="shortcut icon" href="http://placehold.it/64.png/000/fff" />
+    <link rel="shortcut icon" href="assets/images/fav.png" />
     <!-- Retina iPad Touch Icon-->
     <link
       rel="apple-touch-icon"
@@ -56,10 +56,8 @@
           <ul>
             <div class="logo">
               <a href="index.html">
-                <!-- <img src="assets/images/logo.png" alt="" /> --><span
-                  >DOCTIME</span
-                ></a
-              >
+                <img src="assets/images/logo.png" alt="" />
+                </a>
             </div>
             <li class="label">Main</li>
             <li>
